# users_service

./: Makefile  README.md  docker-compose.yaml
api/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/config/: settings.py  urls.py
api/fixtures/: users.json
api/helpers/: __init__.py  swagger_hook.py  timestamp_abstract_model.py
api/users/: admin.py  middleware.py  urls.py
api/users/migrations/: 0001_initial.py  0002_superuser.py
api/users/models/: __init__.py  customer.py  department.py  organization.py  tenant.py  user.py
api/users/serializers/: __init__.py  customer_serializer.py  department_serializer.py  organization_serializer.py  tenant_serializer.py  user_serializer.py
api/users/tests/: conftest.py  test_models.py  test_tenant_middlewware.py  test_viewsets.py
api/users/viewsets/: __init__.py  customer_viewset.py  department_viewset.py  organization_viewset.py  tenant_viewset.py
envs/: api.default.env
proxy/: Dockerfile  default.conf
