[tool.poetry]
name = "users service"
version = "0.1.0"
description = "To be done."
authors = ["Martyna Witkowska <mar.witkowska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "4.2.17"
psycopg = "3.2.3"
dj-database-url = "2.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
