[tool.poetry]
name = "users service"
version = "0.1.0"
description = "To be done."
authors = ["Martyna Witkowska <mar.witkowska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "4.2.17"
psycopg = "3.2.3"
dj-database-url = "2.3.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.4.0"
drf-spectacular = "0.28.0"
pytest-django = "4.9.0"
pytest-cov = "6.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "conftest"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: buisiness core logic",
]

addopts = [
    "-ra -q",
   "--cov=.",
   "--cov-report",
   "term-missing:skip-covered",
   "--cov-fail-under=80"
]

[tool.coverage.run]
omit = [
   "*/tests/*.py"
]


[tool.poetry.group.dev.dependencies]
ruff = "0.8.6"

[tool.ruff]
include = ["pyproject.toml", "core/**/*.py", "tests/**/*.py"]
target-version = "py313"
line-length = 120

[tool.ruff.format]
exclude = ["docs"]
quote-style = "single"
indent-style = "tab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
